--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		 <meta charset="utf-8" />
+		 <meta name="viewport" content="width=device-width, initial-scale=1" />
+		 <meta name="description" content="this is my portfolio" />
+		 <meta name="author" content="francisco vazquez"/>
+		 <title>Francisco</title>
+		 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+		<style>
+		
+		</style>
+	<head>
+	
 	<body>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 		<h1>Hello from here</h1>
+		<div class="container bg-primary">
+			<h2>This nis going to be title   kkBar</h2>
+		</div>
 	</body>
 </html>
