--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		 <meta name="viewport" content="width=device-width, initial-scale=1" />
 		 <meta name="description" content="this is my portfolio" />
 		 <meta name="author" content="francisco vazquez"/>
-		 <title>Francisco</title>
+		 <title>Francisco V</title>
 		 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<style>
 		
