--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	
 	<body>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-		<h1>Hello from here</h1>
-		<div class="container bg-primary">
+		
+		<div class="container bg-secondary.bg-gradient">
 			<h2>This nis going to be title   kkBar</h2>
 		</div>
 	</body>
