--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<body>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 		
-		<div class="container bg-secondary.bg-gradient">
-			<h2>This nis going to be title  koo kkBar</h2>
+		<div class="container bg-secondary bg-gradient">
+			<h2>francisco</h2>
 		</div>
 	</body>
 </html>
