--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
 	<body>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 		
-		<div class="container bg-secondary bg-gradient">
-			<h2>francisco</h2>
-		</div>
+		<nav class="navbar bg-body-tertiary">
+			<div class="container-fluid">
+				<a class="navbar" href="#">
+				 <img src="double.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+				 Francisco Vazquez
+				</a>
+			</div> 
+			
+		</nav>
+		
+		
 	</body>
 </html>
