--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 				 <img src="double.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
 				 Francisco Vazquez
 				</a>
+				 <form class="d-flex" >
+					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+					<button class="btn btn-outline-success text-bg-primary" type="submit">Search</button>
+				</form>
 			</div> 
 			
 		</nav>
