--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 			
 		</nav>
 		
-		
+		<section class="text-center container">
+        <div class="row">
+          <div class="col-6 mx-auto">
+			<h1 class="fw-light">About me</h1>
+			 <p class="lead text-body-secondary">
+              This is a content regarding my profesional experience
+			  This is a content regarding my profesional experience
+			  This is a content regarding my profesional experience
+			  This is a content regarding my profesional experience
+            </p>
+		  </div>
+		</div>
+		</section>
 	</body>
 </html>
